Remove cover img bed2a86b011ae05a2e29ad2c7f40305553bdb438

--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -4,9 +4,9 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>Andrew's Blog</title>
-<meta name=keywords content="Blog,Portfolio,PaperMod">
-<meta name=description content="ExampleSite description">
-<meta name=author content="Me">
+<meta name=keywords content="Blog,Portfolio,PaperMod,Diary">
+<meta name=description content="Loving to explore this world, sharing my thoughts">
+<meta name=author content="Andrew Wu">
 <link rel=canonical href=https://AndrewWu29.github.io/Andrew_Wu29/zh-tw/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
@@ -29,15 +29,17 @@
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="Andrew's Blog">
-<meta property="og:description" content="ExampleSite description">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TVP2NV89QN"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-TVP2NV89QN',{anonymize_ip:!1})}</script>
+<meta property="og:title" content="Andrew's Blog">
+<meta property="og:description" content="Loving to explore this world, sharing my thoughts">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://AndrewWu29.github.io/Andrew_Wu29/zh-tw/"><meta property="og:image" content="https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="ExampleSite">
+<meta property="og:url" content="https://AndrewWu29.github.io/Andrew_Wu29/zh-tw/"><meta property="og:image" content="https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Andrew's Blog">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="Andrew's Blog">
-<meta name=twitter:description content="ExampleSite description">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Andrew's Blog","url":"https://AndrewWu29.github.io/Andrew_Wu29/","description":"ExampleSite description","thumbnailUrl":"https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E","sameAs":["https://www.linkedin.com/in/bing-ying-wu-3b71b783","https://github.com/AndrewWu29","mailto:ying.wu0129@gmail.com"]}</script>
+<meta name=twitter:description content="Loving to explore this world, sharing my thoughts">
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Andrew's Blog","url":"https://AndrewWu29.github.io/Andrew_Wu29/","description":"Loving to explore this world, sharing my thoughts","thumbnailUrl":"https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E","sameAs":["https://www.linkedin.com/in/bing-ying-wu-3b71b783","https://github.com/AndrewWu29","mailto:ying.wu0129@gmail.com"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
