--- a/404.html
+++ b/404.html
@@ -7,16 +7,13 @@
 <meta name=keywords content>
 <meta name=description content="Loving to explore this world, sharing my thoughts">
 <meta name=author content="Andrew Wu">
-<link rel=canonical href=https://AndrewWu29.github.io/Andrew_Wu29/404.html>
-<meta name=google-site-verification content="XYZabc">
-<meta name=yandex-verification content="XYZabc">
-<meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/Andrew_Wu29/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E>
-<link rel=icon type=image/png sizes=16x16 href=https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E>
-<link rel=icon type=image/png sizes=32x32 href=https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E>
-<link rel=apple-touch-icon href=https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E>
-<link rel=mask-icon href=https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20/%20abs%20url%3E>
+<link rel=canonical href=https://AndrewWu29.github.io/404.html>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
+<link rel=icon href=https://AndrewWu29.github.io/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://AndrewWu29.github.io/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://AndrewWu29.github.io/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://AndrewWu29.github.io/apple-touch-icon.png>
+<link rel=mask-icon href=https://AndrewWu29.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.91.2">
@@ -29,9 +26,9 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Loving to explore this world, sharing my thoughts">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://AndrewWu29.github.io/Andrew_Wu29/404.html"><meta property="og:image" content="https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Andrew's Blog">
+<meta property="og:url" content="https://AndrewWu29.github.io/404.html"><meta property="og:image" content="https://AndrewWu29.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Andrew's Blog">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://AndrewWu29.github.io/Andrew_Wu29/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
+<meta name=twitter:image content="https://AndrewWu29.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Loving to explore this world, sharing my thoughts">
 </head>
@@ -40,40 +37,40 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/ accesskey=h title="Andrew's Blog (Alt + H)">Andrew's Blog</a>
+<a href=https://AndrewWu29.github.io/ accesskey=h title="Andrew's Blog (Alt + H)">Andrew's Blog</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
 <ul class=lang-switch><li>|</li>
 <li>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/zh-tw/ title=中文 aria-label=中文>Zh-Tw</a>
+<a href=https://AndrewWu29.github.io/zh-tw/ title=中文 aria-label=中文>Zh-Tw</a>
 </li>
 </ul>
 </span>
 </div>
 <ul id=menu>
 <li>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/posts/ title=Posts>
+<a href=https://AndrewWu29.github.io/posts/ title=Posts>
 <span>Posts</span>
 </a>
 </li>
 <li>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/categories/ title=Categories>
+<a href=https://AndrewWu29.github.io/categories/ title=Categories>
 <span>Categories</span>
 </a>
 </li>
 <li>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/tags/ title=Tags>
+<a href=https://AndrewWu29.github.io/tags/ title=Tags>
 <span>Tags</span>
 </a>
 </li>
 <li>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/search/ title="Search (Alt + /)" accesskey=/>
+<a href=https://AndrewWu29.github.io/search/ title="Search (Alt + /)" accesskey=/>
 <span>Search</span>
 </a>
 </li>
 <li>
-<a href=https://AndrewWu29.github.io/Andrew_Wu29/about/ title=About>
+<a href=https://AndrewWu29.github.io/about/ title=About>
 <span>About</span>
 </a>
 </li>
@@ -84,7 +81,7 @@
 <div class=not-found>404</div>
 </main>
 <footer class=footer>
-<span>&copy; 2022 <a href=https://AndrewWu29.github.io/Andrew_Wu29/>Andrew's Blog</a></span>
+<span>&copy; 2022 <a href=https://AndrewWu29.github.io/>Andrew's Blog</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
