--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>https://AndrewWu29.github.io/Andrew_Wu29/</title><link rel=canonical href=https://AndrewWu29.github.io/Andrew_Wu29/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://AndrewWu29.github.io/Andrew_Wu29/"></head></html>
+<!doctype html><html><head><title>https://AndrewWu29.github.io/</title><link rel=canonical href=https://AndrewWu29.github.io/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://AndrewWu29.github.io/"></head></html>
