Modified button name in zh-tw eeaa4f51a8181fafc61e0b81f0d779dce80f791e

--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -98,8 +98,8 @@
 <a class=button href=posts rel=noopener title=貼文>
 <span class=button-inner>貼文</span>
 </a>
-<a class=button href=tags rel=noopener title=分類>
-<span class=button-inner>分類</span>
+<a class=button href=tags rel=noopener title=標籤>
+<span class=button-inner>標籤</span>
 </a>
 </div>
 </div>
