Add git note en and modified git note zh-tw 25b2793a01712dda9c0a06d1e52c4cf0067d3d36

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </nav>
 </header>
 <main class=main><div class=profile>
-<div class=profile_inner><img src=profile_avatar.jpg alt="profile image" height=180 width=180>
+<div class=profile_inner><img src=https://AndrewWu29.github.io/profile_avatar.jpg alt="profile image" height=180 width=180>
 <h1>Andrew Wu</h1>
 <span>I&rsquo;m a QAE, and seeking a job in the UK.</span><div class=social-icons>
 <a href=https://www.linkedin.com/in/bing-ying-wu-3b71b783 target=_blank rel="noopener noreferrer me" title=Linkedin><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
