--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -36,7 +36,7 @@
 <meta name=twitter:image content="https://AndrewWu29.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="Andrew's Blog">
 <meta name=twitter:description content="Loving to explore this world, sharing my thoughts">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Andrew's Blog","url":"https://AndrewWu29.github.io/","description":"Loving to explore this world, sharing my thoughts","thumbnailUrl":"https://AndrewWu29.github.io/favicon.ico","sameAs":["https://www.linkedin.com/in/bing-ying-wu-3b71b783","https://github.com/AndrewWu29","mailto:ying.wu0129@gmail.com"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Andrew's Blog","url":"https://AndrewWu29.github.io/","description":"Loving to explore this world, sharing my thoughts","thumbnailUrl":"https://AndrewWu29.github.io/favicon.ico","sameAs":["https://www.linkedin.com/in/bing-ying-wu-3b71b783","https://github.com/AndrewWu29","mailto:ying.wu0129@gmail.com","index.xml"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -92,6 +92,8 @@
 <a href=https://github.com/AndrewWu29 target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
 </a>
 <a href=mailto:ying.wu0129@gmail.com target=_blank rel="noopener noreferrer me" title=Email><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+</a>
+<a href=index.xml target=_blank rel="noopener noreferrer me" title=Rss><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg>
 </a>
 </div>
 <div class=buttons>
